@@ -1,5 +1,0 @@
-/* -*- C++ -*- */
-// $Id$
-
-#error "Please use config-irix6.x-sgic++.h."
-#error "Set threads=0 in your platform_macros.GNU to disable multi-threading."
